<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/posts_background_sync_key"
        android:title="@string/posts_background_sync_title" />

    <com.shaubert.util.ListPreferenceWithAutoSummary
        android:defaultValue="86400000"
        android:dialogTitle="@string/background_sync_period_dialog_title"
        android:entries="@array/sync_time_labes"
        android:entryValues="@array/sync_time_values"
        android:key="@string/background_sync_period_key"
        android:summary="%s"
        android:title="@string/background_sync_period_title"
        android:dependency="@string/posts_background_sync_key" />
    
</PreferenceScreen>