<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search_menu_item"
        android:showAsAction="always"
        android:title="@string/search_menu_title"
        android:icon="@drawable/ic_menu_search">
    </item>

    <item
        android:id="@+id/refresh_blogs_menu_item"
        android:showAsAction="always"
        android:title="@string/refresh_posts"
        android:icon="@drawable/ic_menu_refresh">
    </item>

    <item
        android:id="@+id/favorites_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/only_favorites"
        android:icon="@drawable/ic_menu_show_only_favorites">
    </item>

    <item
        android:id="@+id/settings_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/setting_menu_item_title"
        android:icon="@drawable/ic_menu_settings">
    </item>

</menu>