<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/login_field_hint"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <ImageView
            android:id="@+id/captcha_image"
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="@string/captcha_image_content_description"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/captcha_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/captcha_field_hint"
            android:maxLines="1"
            android:visibility="gone"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_button_label"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>